Update base GraalVM to 22.2.0
Summary: All our Enclave adaption PR committed to GraalVM are accepted
sincce GraalVM 22.2.0. Therefore, JavaEnclave can now directly depend on
GraalVM's official release.

Test Plan: all tests pass

Reviewers: lei.yul, cengfeng.lzy, sanhong.lsh

Issue: https://aone.alibaba-inc.com/task/43664463

CR:
https://code.alibaba-inc.com/java-tee/JavaEnclave/codereview/9591926